--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "postcss": "^8.5.6",
+    "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7"
   }
