--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,5 +4,11 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+  },
+
+
+    "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*"] }
   }
 }
