updated-next.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
       "dom",
       "dom.iterable",
       "esnext"
-
-      
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "plugins": [
       {
         "name": "next"
@@ -29,7 +27,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
