--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "jspdf": "^3.0.3",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "resend": "^6.0.1"
